--- a/Початок.html
+++ b/Початок.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Суднові ДВС</title>
+<title>РЎСѓРґРЅРѕРІС– Р”Р’РЎ</title>
 </head>
 <body>
-<h1> Суднові ДВС
+<h1> РЎСѓРґРЅРѕРІС– Р”Р’РЎ
 </h1>
-<p>Двигун / рушій внутрішнього згоряння — різновид теплового двигуна, в якому паливна суміш згорає безпосередньо в робочій камері (всередині) двигуна. Продукти згоряння утворюють робоче тіло. Такий двигун є первинним, хімічним, і перетворює енергію згоряння палива на механічну роботу. Існує велика кількість різноманітних двигунів з внутрішнім згорянням, що відрізняються призначенням, способом віддачі потужності та іншими параметрами.
+<p>Р”РІРёРіСѓРЅ / СЂСѓС€С–Р№ РІРЅСѓС‚СЂС–С€РЅСЊРѕРіРѕ Р·РіРѕСЂСЏРЅРЅСЏ вЂ” СЂС–Р·РЅРѕРІРёРґ С‚РµРїР»РѕРІРѕРіРѕ РґРІРёРіСѓРЅР°, РІ СЏРєРѕРјСѓ РїР°Р»РёРІРЅР° СЃСѓРјС–С€ Р·РіРѕСЂР°С” Р±РµР·РїРѕСЃРµСЂРµРґРЅСЊРѕ РІ СЂРѕР±РѕС‡С–Р№ РєР°РјРµСЂС– (РІСЃРµСЂРµРґРёРЅС–) РґРІРёРіСѓРЅР°. РџСЂРѕРґСѓРєС‚Рё Р·РіРѕСЂСЏРЅРЅСЏ СѓС‚РІРѕСЂСЋСЋС‚СЊ СЂРѕР±РѕС‡Рµ С‚С–Р»Рѕ. РўР°РєРёР№ РґРІРёРіСѓРЅ С” РїРµСЂРІРёРЅРЅРёРј, С…С–РјС–С‡РЅРёРј, С– РїРµСЂРµС‚РІРѕСЂСЋС” РµРЅРµСЂРіС–СЋ Р·РіРѕСЂСЏРЅРЅСЏ РїР°Р»РёРІР° РЅР° РјРµС…Р°РЅС–С‡РЅСѓ СЂРѕР±РѕС‚Сѓ. Р†СЃРЅСѓС” РІРµР»РёРєР° РєС–Р»СЊРєС–СЃС‚СЊ СЂС–Р·РЅРѕРјР°РЅС–С‚РЅРёС… РґРІРёРіСѓРЅС–РІ Р· РІРЅСѓС‚СЂС–С€РЅС–Рј Р·РіРѕСЂСЏРЅРЅСЏРј, С‰Рѕ РІС–РґСЂС–Р·РЅСЏСЋС‚СЊСЃСЏ РїСЂРёР·РЅР°С‡РµРЅРЅСЏРј, СЃРїРѕСЃРѕР±РѕРј РІС–РґРґР°С‡С– РїРѕС‚СѓР¶РЅРѕСЃС‚С– С‚Р° С–РЅС€РёРјРё РїР°СЂР°РјРµС‚СЂР°РјРё.
 </p>
 
-<p>Потужні та легкі, двигуни внутрішнього згоряння дозволили створити не існувавші до цього види транспорту (автомобіль, мотоцикл, гвинтовий і реактивний літаки, вертоліт, ракету, космічний корабель, газотурбохід, судно на повітряній подушці), поліпшити економічність та екологічність  корабельних силових установок і локомотивів. Моторизація призвела до прискорення темпу життя людей, виникнення цілої автомобільної культури (США); у військовій справі дозволила розробити надзвичайно руйнівні машини смерті (танк, винищувач, бомбардувальник, ракети зі звичайною та ядерною боєголовкою, підводний човен з торпедами та інші).
+<p>РџРѕС‚СѓР¶РЅС– С‚Р° Р»РµРіРєС–, РґРІРёРіСѓРЅРё РІРЅСѓС‚СЂС–С€РЅСЊРѕРіРѕ Р·РіРѕСЂСЏРЅРЅСЏ РґРѕР·РІРѕР»РёР»Рё СЃС‚РІРѕСЂРёС‚Рё РЅРµ С–СЃРЅСѓРІР°РІС€С– РґРѕ С†СЊРѕРіРѕ РІРёРґРё С‚СЂР°РЅСЃРїРѕСЂС‚Сѓ (Р°РІС‚РѕРјРѕР±С–Р»СЊ, РјРѕС‚РѕС†РёРєР», РіРІРёРЅС‚РѕРІРёР№ С– СЂРµР°РєС‚РёРІРЅРёР№ Р»С–С‚Р°РєРё, РІРµСЂС‚РѕР»С–С‚, СЂР°РєРµС‚Сѓ, РєРѕСЃРјС–С‡РЅРёР№ РєРѕСЂР°Р±РµР»СЊ, РіР°Р·РѕС‚СѓСЂР±РѕС…С–Рґ, СЃСѓРґРЅРѕ РЅР° РїРѕРІС–С‚СЂСЏРЅС–Р№ РїРѕРґСѓС€С†С–), РїРѕР»С–РїС€РёС‚Рё РµРєРѕРЅРѕРјС–С‡РЅС–СЃС‚СЊ С‚Р° РµРєРѕР»РѕРіС–С‡РЅС–СЃС‚СЊ  РєРѕСЂР°Р±РµР»СЊРЅРёС… СЃРёР»РѕРІРёС… СѓСЃС‚Р°РЅРѕРІРѕРє С– Р»РѕРєРѕРјРѕС‚РёРІС–РІ. РњРѕС‚РѕСЂРёР·Р°С†С–СЏ РїСЂРёР·РІРµР»Р° РґРѕ РїСЂРёСЃРєРѕСЂРµРЅРЅСЏ С‚РµРјРїСѓ Р¶РёС‚С‚СЏ Р»СЋРґРµР№, РІРёРЅРёРєРЅРµРЅРЅСЏ С†С–Р»РѕС— Р°РІС‚РѕРјРѕР±С–Р»СЊРЅРѕС— РєСѓР»СЊС‚СѓСЂРё (РЎРЁРђ); Сѓ РІС–Р№СЃСЊРєРѕРІС–Р№ СЃРїСЂР°РІС– РґРѕР·РІРѕР»РёР»Р° СЂРѕР·СЂРѕР±РёС‚Рё РЅР°РґР·РІРёС‡Р°Р№РЅРѕ СЂСѓР№РЅС–РІРЅС– РјР°С€РёРЅРё СЃРјРµСЂС‚С– (С‚Р°РЅРє, РІРёРЅРёС‰СѓРІР°С‡, Р±РѕРјР±Р°СЂРґСѓРІР°Р»СЊРЅРёРє, СЂР°РєРµС‚Рё Р·С– Р·РІРёС‡Р°Р№РЅРѕСЋ С‚Р° СЏРґРµСЂРЅРѕСЋ Р±РѕС”РіРѕР»РѕРІРєРѕСЋ, РїС–РґРІРѕРґРЅРёР№ С‡РѕРІРµРЅ Р· С‚РѕСЂРїРµРґР°РјРё С‚Р° С–РЅС€С–).
 </p>
 
 
-<p>Зіркоподібний поршневий двигун на збірці в 1942 році
-Альтернативне сімейство двигунів зовнішнього згоряння має роздільне паливо та робоче тіло, що зумовлює необхідність порівняно повільної передачі тепла згоряння від продуктів згоряння робочому тілу — тому їхня питома потужність значно нижча. Поряд з двигунами зовнішнього згоряння, двигуни внутрішнього згоряння широко використовуються для вироблення електроенергії, використовуваної електродвигунами та іншими споживачами.
+<p>Р—С–СЂРєРѕРїРѕРґС–Р±РЅРёР№ РїРѕСЂС€РЅРµРІРёР№ РґРІРёРіСѓРЅ РЅР° Р·Р±С–СЂС†С– РІ 1942 СЂРѕС†С–
+РђР»СЊС‚РµСЂРЅР°С‚РёРІРЅРµ СЃС–РјРµР№СЃС‚РІРѕ РґРІРёРіСѓРЅС–РІ Р·РѕРІРЅС–С€РЅСЊРѕРіРѕ Р·РіРѕСЂСЏРЅРЅСЏ РјР°С” СЂРѕР·РґС–Р»СЊРЅРµ РїР°Р»РёРІРѕ С‚Р° СЂРѕР±РѕС‡Рµ С‚С–Р»Рѕ, С‰Рѕ Р·СѓРјРѕРІР»СЋС” РЅРµРѕР±С…С–РґРЅС–СЃС‚СЊ РїРѕСЂС–РІРЅСЏРЅРѕ РїРѕРІС–Р»СЊРЅРѕС— РїРµСЂРµРґР°С‡С– С‚РµРїР»Р° Р·РіРѕСЂСЏРЅРЅСЏ РІС–Рґ РїСЂРѕРґСѓРєС‚С–РІ Р·РіРѕСЂСЏРЅРЅСЏ СЂРѕР±РѕС‡РѕРјСѓ С‚С–Р»Сѓ вЂ” С‚РѕРјСѓ С—С…РЅСЏ РїРёС‚РѕРјР° РїРѕС‚СѓР¶РЅС–СЃС‚СЊ Р·РЅР°С‡РЅРѕ РЅРёР¶С‡Р°. РџРѕСЂСЏРґ Р· РґРІРёРіСѓРЅР°РјРё Р·РѕРІРЅС–С€РЅСЊРѕРіРѕ Р·РіРѕСЂСЏРЅРЅСЏ, РґРІРёРіСѓРЅРё РІРЅСѓС‚СЂС–С€РЅСЊРѕРіРѕ Р·РіРѕСЂСЏРЅРЅСЏ С€РёСЂРѕРєРѕ РІРёРєРѕСЂРёСЃС‚РѕРІСѓСЋС‚СЊСЃСЏ РґР»СЏ РІРёСЂРѕР±Р»РµРЅРЅСЏ РµР»РµРєС‚СЂРѕРµРЅРµСЂРіС–С—, РІРёРєРѕСЂРёСЃС‚РѕРІСѓРІР°РЅРѕС— РµР»РµРєС‚СЂРѕРґРІРёРіСѓРЅР°РјРё С‚Р° С–РЅС€РёРјРё СЃРїРѕР¶РёРІР°С‡Р°РјРё.
 </p>
 </body>
-<p>Зображення:
-<a href="file:///C:/Users/%D0%90%D0%BD%D0%B4%D1%80%D0%B5%D0%B9/Desktop/%D0%9B%D0%B0%D0%B11/%D0%BA%D1%96%D0%BD%D0%B5%D1%86%D1%8C.html">Натисніть тут!</a>
+<p>Р—РѕР±СЂР°Р¶РµРЅРЅСЏ:
+<a href="file:///C:/Users/%D0%90%D0%BD%D0%B4%D1%80%D0%B5%D0%B9/Desktop/%D0%9B%D0%B0%D0%B11/%D0%BA%D1%96%D0%BD%D0%B5%D1%86%D1%8C.html">РќР°С‚РёСЃРЅС–С‚СЊ С‚СѓС‚!</a>
 </p>
 
 </html>
+git remote add origin <REMOTE_URL>
